@@ -39,6 +39,15 @@
   <translation type="gettext">baobab</translation>
 
   <releases>
+    <release version="43.beta" date="2022-08-07">
+      <description>
+        <p>Disk Usage Analyzer 43.beta comes with updated translations for the following locales:</p>
+        <ul>
+          <li>Abkhazian</li>
+          <li>Georgian</li>
+        </ul>
+      </description>
+    </release>
     <release version="43.alpha" date="2022-07-13">
       <description>
         <p>Disk Usage Analyzer 43.alpha comes with updated translations for the following locales:</p>
