@@ -1,3 +1,9 @@
+43.beta
+=========
+* Translation updates:
+ - Abkhazian
+ - Georgian
+
 43.alpha
 =========
 * Translation updates:
